Proyecto/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: economarket-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: economarket-fase2.com
      http:
        paths:
          # FRONTEND
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # API GATEWAY
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
